# yakof

./: .gitignore  DESIGN.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
benchmarks/: bench00.py
examples/: assembly.py  bench00.py  cafe.py  decaf_yakof.py  simple1.py  simple2.py  simple3.py  traffic.py  traffic2.py
examples/abtesting/model0/: model_dtm.py  model_yakof.py  run.py
examples/abtesting/model5/: model_dtm.py  model_yakof.py  run.py
tests/: __init__.py  test_smoke.py
tests/abtesting/: __init__.py  test_model5.py
tests/atomic/: __init__.py  test_int.py
tests/benchmark/: __init__.py  test_benchmark.py
tests/cafemodel/: __init__.py  test_cafemodel.py
tests/dtlang/: __init__.py  test_constraint.py  test_context.py  test_ensemble.py  test_geometry.py  test_index.py  test_model.py  test_piecewise.py  test_presence.py
tests/frontend/: __init__.py  test_abstract.py  test_autoenum.py  test_autonaming.py  test_bases.py  test_graph.py  test_linearize.py  test_morphisms.py  test_pretty.py  test_spaces.py
tests/minisimulator/: __init__.py  test_minisimulator.py
tests/molveno/: __init__.py  orig.py  test_cross.py  test_orig.py  test_yak.py  yak.py
tests/numpybackend/: __init__.py  test_evaluator.py  test_executor.py
tests/probability/: __init__.py  test_continuous.py  test_discrete.py  test_generalized.py
tests/statsx/: conftest.py  test_statsx_abtesting.py
tests/sympyke/: __init__.py  test_operators.py  test_piecewise.py  test_symbol.py
tests/trafficmodel/: __init__.py  test_trafficmodel.py
yakof/abtesting/: __init__.py
yakof/abtesting/model5/: __init__.py  a.py  b.py
yakof/areaverde/: __init__.py  areaverde_yak.py  dashboard.py  evaluation.py  vehicle_stats.py
yakof/atomic/: __init__.py
yakof/backend/: __init__.py  engine.py  graph.py  numpy_engine.py  orientation.py  oriented.py  pretty.py  tensorflow_engine.py
yakof/benchmark/: __init__.py
yakof/cafemodel/: __init__.py
yakof/dtcompiler/: __init__.py
yakof/dtlang/: __init__.py  constraint.py  context.py  ensemble.py  geometry.py  index.py  model.py  piecewise.py  presence.py
yakof/dtm/: __init__.py
yakof/dtm/ensemble/: ensemble.py
yakof/dtmodel/: __init__.py  constraint.py  context.py  context_variable.py  ensemble.py  evaluator.py  geometry.py  glue.py  index.py  model.py  piecewise.py  presence.py  presence_variable.py
yakof/dtyak/: __init__.py
yakof/fieldspace/: __init__.py  model.py  viz.py
yakof/frontend/: __init__.py  abstract.py  autoenum.py  autonaming.py  bases.py  graph.py  linearize.py  morphisms.py  pretty.py  spaces.py
yakof/indexlang/: __init__.py
yakof/minisimulator/: __init__.py
yakof/molveno/: __init__.py  orig.py  presence_stats.py  yak.py
yakof/numpybackend/: __init__.py  debug.py  dispatch.py  emitter.py  evaluator.py  executor.py  hir.py  numpyeval.py  numpyir.py  numpylower.py  numpyvm.py  semtree.py  vm.py
yakof/phasespace/: __init__.py  analysis.py  model.py  viz.py
yakof/probability/: __init__.py  continuous.py  discrete.py  generalized.py
yakof/sampling/: __init__.py
yakof/statsx/: __init__.py  categorical.py  continuous.py  model.py  scipy.py
yakof/symbolic/: __init__.py  symbol.py
yakof/sympyke/: __init__.py  lambdify.py  operators.py  piecewise.py  symbol.py
yakof/trafficmodel/: __init__.py
(+15 files in other folders)
