[project]
name = "yakof"
version = "0.7.0"
description = "A technology demonstrator for sustainability modeling"
requires-python = ">=3.11.0"
dependencies = [
    "dt_model",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",
    "sympy>=1.13.0",
]
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pyright>=1.1.397",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=yakof --cov-report=xml --cov-report=term-missing"

[tool.uv.sources]
dt-model = { git = "https://github.com/fbk-most/dt-model", rev = "main" }
