[project]
name = "yakof"
version = "0.8.0"
description = "A technology demonstrator for sustainability modeling"
requires-python = ">=3.11.0"
dependencies = ["civic-digital-twins", "numpy>=2.2.0"]
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pyright>=1.1.397", "pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=yakof --cov-report=xml --cov-report=term-missing"

[tool.uv.sources]
civic-digital-twins = { git = "https://github.com/fbk-most/dt-model", rev = "main" }

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["W", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
