[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yakof"
version = "0.9.0"
description = "A technology demonstrator for sustainability modeling"
readme = "README.md"
authors = [{ name = "Simone Basso", email = "sibasso@fbk.eu" }]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = []
requires-python = ">=3.11.0"
dependencies = ["civic-digital-twins", "numpy>=2.2.0"]

[dependency-groups]
dev = ["pyright>=1.1.397", "pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[project.urls]
Homepage = "https://github.com/bassosimone/yakof"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["yakof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=yakof --cov-report=xml --cov-report=term-missing"

[tool.uv.sources]
civic-digital-twins = { git = "https://github.com/fbk-most/dt-model", rev = "main" }

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["W", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
